lib_LTLIBRARIES = libwalet.la

libwalet_la_SOURCES = gop.c subband.c image.c frame.c utils.c rangecoder.c filters.c motion.c segmentation.c walet.h
#AM_CXXFLAGS = $(GCC_FLAGS)
#libwalet_la_CFLAGS = $(GCC_FLAGS)

noinst_HEADERS = gop.h subband.h image.h frame.h rangecoder.h utils.h filters.h motion.h segmentation.h


